package com.progi.stemtutor.model.enums;

public class Subject {
}
